--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,12 +1,15 @@
 @import "tailwindcss";
 
+html {
+  @apply text-gray-800
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #9a3e3e;
 
   font-synthesis: none;
@@ -17,10 +20,6 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 @media (prefers-color-scheme: light) {
